--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 	<link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 	<link rel="stylesheet" href="vendor/range-slider.min.css">
+	<link rel="stylesheet" href="vendor/bootstrap-grid.css">
+	<link rel="stylesheet" href="vendor/flickity.min.css">
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -23,6 +25,7 @@
 					<h2 class="logo__subtitle">the best homemade Italian food</h2>
 				</div>
 				<div class="main-nav">
+					<a href="#home">Home</a>
 					<a href="#order">Order</a>
 					<a href="#booking">Booking</a>
 				</div>
@@ -63,6 +66,9 @@
 	</header>
 
 	<div id="pages">
+		<section id="home">
+			<div id="home-wrapper" class="home-wrapper container"></div>
+		</section>
 		<section id="order">
 			<div id="product-list" class="product-list container"></div>
 		</section>
@@ -70,6 +76,53 @@
 			<div class="booking-wrapper container"></div>
 		</section>
 	</div>
+
+	<script id="template-home" type="text/x-handlebars-template">
+		<section class="box">
+			<div class="container boxes">
+				<div class="row">
+					<div class="col-6 box-order home-nav" data="#order"">
+						<p>ORDER ONLINE</p>
+						<span>great food</span>						
+					</div>
+					<div class="col-6 box-booking home-nav" data="booking">
+						<p>BOOK A TABLE</p>
+						<span>great place</span>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 box-hours">
+						<p>OPENING HOURS:</p>
+						<span>TUE-SUN, 12PM - 12AM</span>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="comments">
+			<div class="container">
+				<div class="main-carousel">
+					<div class="row">
+						<div class="col-6">
+						<img src="./images/pizza-3.jpg">
+						</div>
+						<div class="col-6">
+						</div>
+					</div>
+					<div class="row">
+						<img src="./images/pizza-3.jpg">
+					</div>
+					<div class="row">
+						<img src="./images/pizza-3.jpg">
+					</div>
+			  </div>			  
+			</div>
+		</section>
+		<section class="gallery">
+			<div class="container">
+				<p>GALLERY</p>
+			</div>
+		</section>
+	</script>
 
 	<script id="template-cart-product" type="text/x-handlebars-template">
 			<li>
@@ -248,6 +301,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 	<script src="vendor/range-slider.min.js"></script>
+	<script src="vendor/flickity.pkgd.min.js"></script>
 	<script src="js/app.js" type="module"></script>
 </body>
 
