Add home - boxes, carousel, gallery

--- a/src/index.html
+++ b/src/index.html
@@ -100,26 +100,45 @@
 		</section>
 		<section class="comments">
 			<div class="container">
-				<div class="main-carousel">
-					<div class="row">
-						<div class="col-6">
-						<img src="./images/pizza-3.jpg">
+				<div class="main-carousel mt-5">
+					<div class="row mt-5">
+						<div class="photo">
 						</div>
-						<div class="col-6">
+						<div class="px-5 py-3 opinion">
+							<h2>SLIDE 1</h2>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint eum laboriosam ut magni libero delectus at aliquam provident corrupti praesentium!</p>
 						</div>
 					</div>
-					<div class="row">
-						<img src="./images/pizza-3.jpg">
+					<div class="row mt-5">
+						<div class="photo">
+						</div>
+						<div class="px-5 py-3 opinion">
+							<h2>SLIDE 2</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio officiis corporis nobis, possimus ab ipsa.</p>
+						</div>
 					</div>
-					<div class="row">
-						<img src="./images/pizza-3.jpg">
+					<div class="row mt-5">
+						<div class="photo">
+						</div>
+						<div class="px-5 py-3 opinion">
+							<h2>SLIDE 3</h2>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga ipsam cupiditate dolore neque fugit vel suscipit delectus dolor?</p>
+						</div>
 					</div>
 			  </div>			  
 			</div>
 		</section>
 		<section class="gallery">
 			<div class="container">
-				<p>GALLERY</p>
+				<div class="row mt-5 photos">
+					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-4.jpg"></div>
+					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-5.jpg"></div>
+					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-6.jpg"></div>
+					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-7.jpg"></div>
+					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-8.jpg"></div>
+					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-9.jpg"></div>
+				</div>
+				<div class="row my-3 pb-3 photos"><a href="#">View more on instagram</a></div>
 			</div>
 		</section>
 	</script>
