Add gallery animation

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<title>Pizzeria</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext"
 		rel="stylesheet" />
-	<link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet" />
+	<script src="https://kit.fontawesome.com/ee999ae90b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 	<link rel="stylesheet" href="vendor/range-slider.min.css">
 	<link rel="stylesheet" href="vendor/bootstrap-grid.css">
@@ -130,13 +130,45 @@
 		</section>
 		<section class="gallery">
 			<div class="container">
-				<div class="row mt-5 photos">
-					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-4.jpg"></div>
-					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-5.jpg"></div>
-					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-6.jpg"></div>
-					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-7.jpg"></div>
-					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-8.jpg"></div>
-					<div class="col-lg-4 col-sm-6"><img src="./images/pizza-9.jpg"></div>
+				<div class="row mt-5">
+					<div class="col-lg-4 col-sm-6 photos">
+						<img src="./images/pizza-4.jpg">
+						<div class="overlay">
+							<div class="icons">
+								<i class="fa-solid fa-heart fa-fw"></i><i class="fa-solid fa-share-nodes fa-fw"></i>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 photos">
+						<img src="./images/pizza-5.jpg">
+						<div class="overlay">
+							<div class="icons"><i class="fa-solid fa-heart fa-fw"></i><i class="fa-solid fa-share-nodes fa-fw"></i></div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 photos">
+						<img src="./images/pizza-6.jpg">
+						<div class="overlay">
+							<div class="icons"><i class="fa-solid fa-heart fa-fw"></i><i class="fa-solid fa-share-nodes fa-fw"></i></div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 photos">
+						<img src="./images/pizza-7.jpg">
+						<div class="overlay">
+							<div class="icons"><i class="fa-solid fa-heart fa-fw"></i><i class="fa-solid fa-share-nodes fa-fw"></i></div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 photos">
+						<img src="./images/pizza-8.jpg">
+						<div class="overlay">
+							<div class="icons"><i class="fa-solid fa-heart fa-fw"></i><i class="fa-solid fa-share-nodes fa-fw"></i></div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 photos">
+						<img src="./images/pizza-9.jpg">
+						<div class="overlay">
+							<div class="icons"><i class="fa-solid fa-heart fa-fw"></i><i class="fa-solid fa-share-nodes fa-fw"></i></div>
+						</div>
+					</div>
 				</div>
 				<div class="row my-3 pb-3 photos"><a href="#">View more on instagram</a></div>
 			</div>
